# MLops

./: .gitignore  .pre-commit-config.yaml  README.md  commands.py  main.py  pyproject.toml
.dvc/: config
.github/workflows/: github-actions-demo.yml
mlops/: config.yaml  data.dvc  infer.py  train.py
mlops/conf/: config.yaml
mlops/data/: prepared_data.csv
mlops/models/: basic_model.py  lightning_model.py  models.py
mlops/tools/: datasets.py  eval_model.py  inference_model.py  train_model.py
