[tool.poetry]
name = "mlops"
version = "0.1.0"
description = ""
authors = ["lewinskydmitry <61576391+lewinskydmitry@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "<3.13,>=3.9"
torch = "^2.0.1"
pandas = "^2.1.1"
numpy = "^1.26.0"
scikit-learn = "^1.3.1"
dvc = "^3.27.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.4.0"
isort = "^5.12.0"
black = "^23.9.1"
flake8 = "^6.1.0"
nbqa = "^1.7.0"
prettier = "^0.0.7"
pytest = "^7.4.2"
fire = "^0.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
